--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             <a href="">header link three</a>
         </div>
         <div class="hero-content">
-
+            <div class="hero-text">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="this is a placeholder for an image" height="100px" width="200px">
         </div>
-
     </div>
 </body>
 </html>
