--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Landing Page</title>
 </head>
 <body>
     <div class="section1">
         <div class="header">
-            Header Logo
-            <a href="">header link one</a>
-            <a href="">header link two</a>
-            <a href="">header link three</a>
+            <div class="logo">Header Logo</div>
+            <div class="header-links">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </div>
         </div>
         <div class="hero-content">
             <div class="hero-text">
