--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
             <img src="" alt="this is a placeholder for an image" height="100px" width="200px">
         </div>
     </div>
+    <div class="section2">
+        <div class="info-header">Some random information.</div>
+        <div class="info-container">
+            <div class="img-content">
+                <img src="" alt="" height="100px" width="100px">
+                this is some subtext under an illustration or image
+            </div>
+            <div class="img-content">
+                <img src="" alt="" height="100px" width="100px">
+                this is some subtext under an illustration or image
+            </div>
+            <div class="img-content">
+                <img src="" alt="" height="100px" width="100px">
+                this is some subtext under an illustration or image
+            </div>
+            <div class="img-content">
+                <img src="" alt="" height="100px" width="100px">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+    </div>
 </body>
 </html>
