Style section2 according to image spec
Also, image size has been changed in html, and subtext has been put
into div.

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
         <div class="info-header">Some random information.</div>
         <div class="info-container">
             <div class="img-content">
-                <img src="" alt="" height="100px" width="100px">
-                this is some subtext under an illustration or image
+                <img src="" alt="" height="150px" width="150px">
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="100px" width="100px">
-                this is some subtext under an illustration or image
+                <img src="" alt="" height="150px" width="150px">
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="100px" width="100px">
-                this is some subtext under an illustration or image
+                <img src="" alt="" height="150px" width="150px">
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="100px" width="100px">
-                this is some subtext under an illustration or image
+                <img src="" alt="" height="150px" width="150px">
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
