--- a/index.html
+++ b/index.html
@@ -55,5 +55,12 @@
         </div>
         <div class="quote-credit">-Thor, God of Thunder</div>
     </div>
+    <div class="section4">
+        <div class="text">
+            <div class="bold-text">Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
