Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
         </div>
         <button>Sign up</button>
     </div>
+    <div class="footer">
+        Copyright <span>&copy;</span> The Odin Project 2021
+    </div>
 </body>
 </html>
