Add images to repo and link them to index.html
Added image details (credits and contact info) to README. Validated
html and css using W3C tools. Set height to auto for images to maintain
proportions. Allowed wrap in hero, information, and call to action
sections.

--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
                 <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="this is a placeholder for an image" height="100px" width="200px">
+            <img src="./images/super-hero.jpg" alt="a person wearing futuristic armour and holding a shield" height="100" width="200">
         </div>
     </div>
     <div class="section2">
         <div class="info-header">Some random information.</div>
         <div class="info-container">
             <div class="img-content">
-                <img src="" alt="" height="150px" width="150px">
+                <img src="./images/plain-book.jpg" alt="book with a design on the cover" height="150" width="150">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="150px" width="150px">
+                <img src="./images/poem-book-and-coffee.jpg" alt="Longfellow's Poems book and a coffee cup on a saucer" height="150" width="150">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="150px" width="150px">
+                <img src="./images/book-on-table.jpg" alt="a book on a table" height="150" width="150">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="img-content">
-                <img src="" alt="" height="150px" width="150px">
+                <img src="./images/muscle-cars-book.jpg" alt="a book titled MUSCLE CARS with a yellow 1970 dodge challenger convertible on the cover" height="150" width="150">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
         </div>
